Made topnav fixed, and changed store icons

--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -57,25 +57,25 @@
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a class="nav-link active" href="#">
-                        <img src="./Icons/allProductsIcon.png" class="icon" alt="All Products">
+                        <img src="https://img.icons8.com/?size=256&id=5479&format=png" class="icon" alt="All Products">
                         All Products
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <img src="./Icons/cakeIcon.png" class="icon" alt="Cake">
+                        <img src="https://img.icons8.com/?size=256&id=8449&format=png" class="icon" alt="Cake">
                         Cake
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <img src="./Icons/cookiesIcon.png" class="icon" alt="Cookies">
+                        <img src="https://img.icons8.com/?size=256&id=4047&format=png" class="icon" alt="Cookies">
                         Cookies
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <img src="./Icons/brownieIcon.png" class="icon" alt="Brownies">
+                        <img src="https://img.icons8.com/?size=256&id=94Riz9ScNqRf&format=png" class="icon" alt="Brownies">
                         Brownies
                     </a>
                 </li>
