--- a/src/main/resources/templates/fragments/topNavBar.html
+++ b/src/main/resources/templates/fragments/topNavBar.html
@@ -1,4 +1,4 @@
-<div th:fragment="topNavBar">
+<div th:fragment="topNavBar" class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#">Bliss Bites</a>
