Added padding and formatted numbers

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -12,7 +12,7 @@
 <!-- Top Navbar -->
 <header th:insert="fragments/topNavBar.html :: topNavBar"></header>
 
-<div class="container text-center mt-5">
+<div class="container text-center mt-5 pt-3">
     <h1 class="display-1 fw-bold">Cart</h1>
 </div>
 <div class="container">
