--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -12,7 +12,7 @@
 <header th:insert="fragments/topNavBar.html :: topNavBar"></header>
 
     <!-- Contact Us Content -->
-    <div class="container mt-5">
+    <div class="container mt-5 pt-3">
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <h1>Contact Us</h1>
