--- a/src/main/resources/templates/thankYou.html
+++ b/src/main/resources/templates/thankYou.html
@@ -11,7 +11,7 @@
 <!-- Top Navbar -->
 <header th:insert="fragments/topNavBar.html :: topNavBar"></header>
 
-<div class="container text-center mt-5">
+<div class="container text-center mt-5 pt-3">
     <h1>Thank you for shopping with Bliss Bites!</h1>
 </div>
 </body>
