--- a/src/main/resources/templates/desertDetails.html
+++ b/src/main/resources/templates/desertDetails.html
@@ -11,7 +11,7 @@
 <!-- Top Navbar -->
 <header th:insert="fragments/topNavBar.html :: topNavBar"></header>
 
-    <div class="container text-center mt-5">
+    <div class="container text-center mt-5 pt-3">
         <div class="row align-items-center">
 
             <div class="col-7">
